<resources>
    <string name="app_name">LeadersBoard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hours_fragment">Learning Leaders</string>
    <string name="skillIq_fragment">Skill IQ Leaders</string>
    <string name="hours_image">hours image</string>
    <string name="loading_gads_hours">Loading GADS Hours..</string>
    <string name="skill_iq_score"> Skill IQ Score, </string>
    <string name="hours_count"> Learning Hours, </string>
    <string name="gads_hours_list">GADS Hours List</string>
    <string name="loading_gads_skillIq">Loading GADS SkillIQ…</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (Link)</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission Not Successful</string>
</resources>