<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@drawable/bkg"
        tools:context=".view.ui.SubmitActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:elevation="@dimen/eight_dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <Button
                android:id="@+id/back_pressed"
                android:onClick="backButtonPressed"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_margin="@dimen/eight_dp"
                android:background="@drawable/arrow_back" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:src="@drawable/gads_tr" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:elevation="@dimen/eight_dp"
            app:cardElevation="@dimen/sixteen_dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/eight_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/sixteen_sp"
                    android:gravity="center"
                    android:text="@string/project_submission"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginRight="@dimen/eight_dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:background="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:padding="@dimen/eight_sp"
                    android:hint="@string/first_name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:background="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:padding="@dimen/eight_sp"
                    android:hint="@string/last_name"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/eight_dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:padding="@dimen/eight_sp"
                android:hint="@string/email_address"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/eight_dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/project_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:padding="@dimen/eight_sp"
                android:hint="@string/project_on_github_link"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            android:onClick="toSubmitAction"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@color/orange"
            android:text="@string/submit"/>
    </LinearLayout>
</layout>